# resume-interview-workbench

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
app/desktop-launcher/: index.html  styles.css
app/server/: config.js  env.js  server.js
app/server/db/: README.md  client.js  migration-runner.js
app/server/lib/: fs-utils.js  http.js  log-sinks.js  logger.js  span.js
app/server/scripts/: backfill-sessions.js  check.js  db-doctor.js  db-up.js  desktop-app-runtime-vendor.js  desktop-build-portable.js  desktop-build-release.js  desktop-dev-server.js  desktop-dev.js  desktop-doctor.js  desktop-node-vendor.js  desktop-postgres-prepare.js  (+10 more)
app/web/: app.js  index.html  styles.css
desktop-seed/resume-package/: README.md
docs/: commit-convention.md  database-architecture-plan.md  desktop-tauri-plan.md  interview-engine-redesign.md  logging-observability-design.md  ui-rearchitecture-plan.md  ui-token-reference.md
interview-kit/jobs/: ai-game-tools-architect.json  unity-gameplay-engineer.json
interview-kit/roles/: ai-systems-interviewer.json  unity-technical-lead.json
interview-kit/templates/: generic-client-engineer-template.json  hungry-studio-senior-u3d-template.json
resume-package/: README.md  resume.json  resume.meta.json  resume.schema.json
scripts/: desktop.cmd  desktop.ps1  dev.cmd  dev.ps1  setup-local.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/node/: README.md
src-tauri/resources/postgres/: README.md
src-tauri/src/: main.rs
(+66 files in other folders)
