[package]
name = "resume-interview-workbench-desktop"
version = "0.1.0"
description = "Desktop shell for Resume Interview Workbench"
authors = ["resume-interview-workbench"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
